Add witchhat.spark (mapInArrow bridge) and an aarch64 CI wheel
Two Databricks-usability gaps closed:

- crates/witchhat-py/python/witchhat/spark.py (pure Python, no Rust): bridges
  every witchhat kernel to pyspark.sql.DataFrame via mapInArrow. Classifies
  each wrapper by correctness class (docs/architecture.md Chapter XVI):
  row-local (hash_rows, clean_with_preset/rules) stream one batch to one
  batch; partition-coordinating (drop_duplicates, aggregate) buffer a whole
  partition via pa.concat_batches and default to repartition=True, since
  mapInArrow gives no visibility across partitions and Spark's own
  hash-partitioning is what makes that default correct, not just
  convenient; broadcast_join mirrors Spark's own broadcast-join
  optimization rather than attempting a distributed shuffle join, which
  witchhat cannot do.

  Found and fixed a real pyspark gotcha along the way: StructType.add()
  mutates and returns self rather than a copy, so df.schema.add(...)
  silently corrupts the live DataFrame. Worked around with a _with_field
  helper that builds a fresh StructType instead. Also handled Spark/Arrow
  having no unsigned integer type: hash_rows bit-reinterprets its uint64
  result as int64 via pyarrow.Array.view rather than losing values to a
  range-checked cast.

  Verified schema-level logic directly against a real local SparkSession.
  Full mapInArrow execution could not be verified end-to-end in this
  sandbox, blocked by a local JDK21-vs-pyspark's-bundled-Arrow-Java
  incompatibility confirmed to affect bare pyspark with no witchhat
  involved at all (see tools/spark_smoke.py and CLAUDE.md for the
  diagnosis); not expected on Databricks, which manages its own JDK.

- .github/workflows/ci.yml: the wheel job is now a matrix building and
  verifying both x86_64 (ubuntu-latest) and aarch64 (ubuntu-24.04-arm, a
  real ARM64 runner, not QEMU) manylinux wheels, for Graviton Databricks
  clusters. Round-trip verification runs natively on each architecture'